# EDI-Project

./: .gitignore  README.md  automation.py  batch_results.json  paid_api_service.py  setup.py  setup_wizard.py  test_runner.py
edi-desktop-app/: index.html  main.js  package.json  python_adapter.py  renderer.js
edi-desktop-app/python/: server.py
edi_engine/: README.md  __init__.py  ai_service.py  pyproject.toml  server.py
edi_engine/src/edi_engine/: __init__.py  core.py  utils.py
edi_engine/src/edi_engine/healthcare/: claims.py  eligibility.py
edi_engine/src/edi_engine/logistics/: finance.py  orders.py  shipping.py
edi_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
saas_backend/: main.py
tests/: test_parse_edi.py
